'feat:支持composer自动引入'

--- a/composer.json
+++ b/composer.json
@@ -13,5 +13,12 @@
         "psr-4": {
             "Sabo\\JunitLaravel\\": "src"
         }
+    },
+    "extra":{
+        "laravel":{
+            "providers":[
+                "Sabo\\JunitLaravel\\Providers\\JunitServiceProvider"
+            ]
+        }
     }
 }
